# TrajectoryAlign

./: CMakeLists.txt  LICENSE  README.md
src/: pose.h  utils.cpp  utils.h
src/factor/: math_util.hpp  pose_factor.cpp  pose_factor.h
